Fixed section title not showing issue in IE | Fixed company logos not showing in Firefox and IE, added height to the image within the svg | Attempted to add AJAX contact form email processing, but php file couldnt be found | Updated skills in the skills section

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -24,6 +24,33 @@ body {
 }
 
 
+#loader {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color: #F5F5F5;
+    z-index: 9999;
+
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+
+    -webkit-justify-content: center;
+    justify-content: center;
+}
+
+.spinner-black {
+	border-color: #212121;
+}
+
+
 
 #sky-container {
 	color: #333;
@@ -277,7 +304,7 @@ rect {
 }
 
 
-g.tree-container g.node[transform="translate(0,0)"] {
+g.tree-container g.node[transform="translate(0,0)"], g.tree-container g.node[transform="translate(0)"] {
 
 	display: none;
 }
@@ -322,7 +349,7 @@ g.tree-container g.node[transform="translate(0,0)"] {
     text-shadow: -2px -3px 2px rgba(0, 0, 0, 0.25);
 
     margin-top: 0;
-    z-index: -1;
+    /*z-index: -1;*/
 
     font-family: "Roboto", Arial, sans-serif;
 }
